--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "exports-loader": "^0.6.4",
+    "imports-loader": "^0.7.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^4.1.1",
