--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fatvegan",
   "version": "1.0.0",
-  "description": "react tests",
+  "description": "SPA Restaurant Site",
   "main": "navigation.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,13 +13,18 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "css-loader": "^0.28.7",
     "exports-loader": "^0.6.4",
+    "extract-text-webpack-plugin": "^3.0.0",
     "imports-loader": "^0.7.1",
+    "node-sass": "^4.5.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
-    "webpack": "^2.3.3"
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.5.5"
   },
   "babel": {
     "presets": [
